--- a/tests.ipynb
+++ b/tests.ipynb
@@ -23,54 +23,249 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 57,
    "id": "4f2e196a",
    "metadata": {},
    "outputs": [],
    "source": [
-    "a=torch.tensor([[1,2],[3,4]])"
+    "a=torch.tensor([[1,2],[3,4]])\n",
+    "b=torch.tensor([[1,2]])"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": 58,
    "id": "d502e11d",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "tensor(2.5000, dtype=torch.float64)"
+       "tensor([[2, 4],\n",
+       "        [4, 6]])"
       ]
      },
-     "execution_count": 52,
+     "execution_count": 58,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "a.mean(dtype=torch.float64)"
+    "a + b"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 61,
+   "id": "fa96042e",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "tensor([[ 2.5000],\n",
+       "        [12.5000]])"
+      ]
+     },
+     "execution_count": 61,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "a.float().pow(2).mean(dim=-1, keepdim=True)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 62,
+   "id": "6db97b69",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "tensor([[1.0000, 1.4142],\n",
+       "        [3.0000, 2.8284]])"
+      ]
+     },
+     "execution_count": 62,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "a * torch.rsqrt(b + 1e-6)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "0723fb61",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "class FeedForward(nn.Module):\n",
+    "    def __init__(self, cfg):\n",
+    "        super().__init__()\n",
+    "        self.fc1 = nn.Linear(cfg[\"emb_dim\"], cfg[\"hidden_dim\"], dtype=cfg[\"dtype\"], bias=False)\n",
+    "        self.fc2 = nn.Linear(cfg[\"emb_dim\"], cfg[\"hidden_dim\"], dtype=cfg[\"dtype\"], bias=False)\n",
+    "        self.fc3 = nn.Linear(cfg[\"hidden_dim\"], cfg[\"emb_dim\"], dtype=cfg[\"dtype\"], bias=False)\n",
+    "\n",
+    "    def forward(self, x):\n",
+    "        x_fc1 = self.fc1(x)\n",
+    "        x_fc2 = self.fc2(x)\n",
+    "        x = nn.functional.gelu(x_fc1, approximate=\"tanh\") * x_fc2\n",
+    "        return self.fc3(x)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 84,
+   "id": "8e8319d7",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Set seed for reproducible results\n",
+    "torch.manual_seed(1)\n",
+    "import random\n",
+    "random.seed(1)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 90,
+   "id": "d297ff4d",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Input: tensor([[1., 2.],\n",
+      "        [3., 4.]])\n",
+      "Input shape: torch.Size([2, 2])\n",
+      "\n",
+      "Weight matrix shape: torch.Size([3, 2])\n",
+      "Weight matrix:\n",
+      "Parameter containing:\n",
+      "tensor([[ 0.1975,  0.6707],\n",
+      "        [ 0.4667, -0.6443],\n",
+      "        [-0.6723, -0.3411]], requires_grad=True)\n",
+      "\n",
+      "Output shape: torch.Size([2, 3])\n",
+      "Output:\n",
+      "tensor([[2.7734, 2.1795, 1.0524],\n",
+      "        [6.3718, 5.1561, 2.3012]], grad_fn=<MmBackward0>)\n",
+      "\n",
+      "Manual computation (input @ weight.T):\n",
+      "tensor([[2.7734, 2.1795, 1.0524],\n",
+      "        [6.3718, 5.1561, 2.3012]], grad_fn=<MmBackward0>)\n",
+      "Results match: True\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Create test data\n",
+    "input_data = torch.tensor([[1.0, 2.0], [3.0, 4.0]])  # 2x2 input\n",
+    "print(f\"Input: {input_data}\")\n",
+    "print(f\"Input shape: {input_data.shape}\")\n",
+    "\n",
+    "# Create Linear layer: 2 inputs -> 3 outputs, no bias\n",
+    "linear = nn.Linear(2, 3, bias=False, dtype=torch.float32)\n",
+    "\n",
+    "# Print the randomly initialized weights\n",
+    "print(f\"\\nWeight matrix shape: {linear.weight.shape}\")\n",
+    "print(f\"Weight matrix:\\n{linear.weight}\")\n",
+    "\n",
+    "known_weights = torch.tensor([\n",
+    "  [  0.8250,   0.9742],\n",
+    "  [  0.7971,   0.6912],\n",
+    "  [  0.1964,   0.4280]\n",
+    "])\n",
+    "\n",
+    "# Override the randomly initialized weights\n",
+    "linear.weight.data = known_weights\n",
+    "\n",
+    "\n",
+    "# Forward pass\n",
+    "output = linear(input_data)\n",
+    "print(f\"\\nOutput shape: {output.shape}\")\n",
+    "print(f\"Output:\\n{output}\")\n",
+    "\n",
+    "# Manual computation to verify\n",
+    "manual_output = input_data @ linear.weight.T\n",
+    "print(f\"\\nManual computation (input @ weight.T):\\n{manual_output}\")\n",
+    "print(f\"Results match: {torch.allclose(output, manual_output)}\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 93,
+   "id": "5dab80f6",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Input: tensor([[1., 2.],\n",
+      "        [3., 4.]])\n",
+      "Input shape: torch.Size([2, 2])\n",
+      "\n",
+      "Output shape: torch.Size([2, 3])\n",
+      "Output:\n",
+      "tensor([[3.5984, 3.1537, 1.8495],\n",
+      "        [7.1968, 6.1303, 3.0983]], grad_fn=<AddmmBackward0>)\n"
+     ]
+    }
+   ],
+   "source": [
+    "\n",
+    "# Create test data\n",
+    "input_data = torch.tensor([[1.0, 2.0], [3.0, 4.0]])  # 2x2 input\n",
+    "print(f\"Input: {input_data}\")\n",
+    "print(f\"Input shape: {input_data.shape}\")\n",
+    "\n",
+    "# Create Linear layer: 2 inputs -> 3 outputs, no bias\n",
+    "linear = nn.Linear(2, 3, bias=True, dtype=torch.float32)\n",
+    "\n",
+    "known_weights = torch.tensor([\n",
+    "  [  0.8250,   0.9742],\n",
+    "  [  0.7971,   0.6912],\n",
+    "  [  0.1964,   0.4280]\n",
+    "])\n",
+    "\n",
+    "# Override the randomly initialized weights\n",
+    "linear.weight.data = known_weights\n",
+    "linear.bias.data = torch.tensor([\n",
+    "  [  0.8250,   0.9742,   0.7971]\n",
+    "])\n",
+    "\n",
+    "\n",
+    "# Forward pass\n",
+    "output = linear(input_data)\n",
+    "print(f\"\\nOutput shape: {output.shape}\")\n",
+    "print(f\"Output:\\n{output}\")\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 68,
    "id": "950f3845",
    "metadata": {},
    "outputs": [],
    "source": [
-    "out_features = 10\n",
-    "in_features = 5\n",
+    "out_features = 3\n",
+    "in_features = 2\n",
     "\n",
-    "weight = Parameter(\n",
-    "            torch.empty((out_features, in_features))\n",
-    "        )\n",
+    "weight = Parameter(torch.empty((out_features, in_features)))\n",
     "bias = Parameter(torch.empty(out_features))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 64,
    "id": "1156ce49",
    "metadata": {},
    "outputs": [
@@ -78,20 +273,12 @@
      "data": {
       "text/plain": [
        "Parameter containing:\n",
-       "tensor([[1.1327e-13, 0.0000e+00, 0.0000e+00, 0.0000e+00, 2.7074e+23],\n",
-       "        [3.0304e+35, 1.4226e-13, 6.0542e+22, 7.8675e+34, 4.6894e+27],\n",
-       "        [1.6217e-19, 7.3471e+28, 2.6383e+23, 2.7376e+20, 6.3828e+28],\n",
-       "        [1.4603e-19, 1.8888e+31, 4.9656e+28, 7.9463e+08, 3.2604e-12],\n",
-       "        [2.6209e+20, 4.1641e+12, 8.9625e-01, 7.9309e+34, 7.9439e+08],\n",
-       "        [3.2604e-12, 7.3113e+34, 9.5492e-01, 7.3154e+34, 5.9682e-02],\n",
-       "        [7.0374e+22, 5.7886e+22, 6.7120e+22, 6.7331e+22, 6.7120e+22],\n",
-       "        [1.8515e+28, 7.3867e+20, 9.2358e-01, 1.8061e+28, 4.4378e+27],\n",
-       "        [6.0900e-02, 1.8728e+31, 7.3867e+20, 9.2358e-01, 1.1362e+30],\n",
-       "        [7.1547e+22, 4.5828e+30, 1.2121e+04, 7.1846e+22, 7.9168e+07]],\n",
-       "       requires_grad=True)"
+       "tensor([[1.5378e-13, 0.0000e+00],\n",
+       "        [0.0000e+00, 0.0000e+00],\n",
+       "        [0.0000e+00, 4.5661e-41]], requires_grad=True)"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 64,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -102,7 +289,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 69,
    "id": "9b8d6c35",
    "metadata": {},
    "outputs": [
@@ -110,11 +297,10 @@
      "data": {
       "text/plain": [
        "Parameter containing:\n",
-       "tensor([5.7639e-14, 0.0000e+00, 0.0000e+00, 0.0000e+00, 2.7006e+26, 5.9442e-02,\n",
-       "        7.0374e+22, 0.0000e+00, 0.0000e+00, 0.0000e+00], requires_grad=True)"
+       "tensor([1.1390e-13, 0.0000e+00, 0.0000e+00], requires_grad=True)"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 69,
      "metadata": {},
      "output_type": "execute_result"
     }
