--- a/tests.ipynb
+++ b/tests.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "id": "8e310db9",
    "metadata": {},
    "outputs": [
@@ -23,40 +23,40 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 57,
+   "execution_count": 3,
    "id": "4f2e196a",
    "metadata": {},
    "outputs": [],
    "source": [
-    "a=torch.tensor([[1,2],[3,4]])\n",
-    "b=torch.tensor([[1,2]])"
+    "a=torch.tensor([[1,2],[3,4]]).float()\n",
+    "b=torch.tensor([[1,2,3,4]])"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 58,
-   "id": "d502e11d",
+   "execution_count": 4,
+   "id": "6f420302",
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "tensor([[2, 4],\n",
-       "        [4, 6]])"
-      ]
-     },
-     "execution_count": 58,
-     "metadata": {},
-     "output_type": "execute_result"
+     "ename": "RuntimeError",
+     "evalue": "The size of tensor a (2) must match the size of tensor b (4) at non-singleton dimension 1",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[31m---------------------------------------------------------------------------\u001b[39m",
+      "\u001b[31mRuntimeError\u001b[39m                              Traceback (most recent call last)",
+      "\u001b[36mCell\u001b[39m\u001b[36m \u001b[39m\u001b[32mIn[4]\u001b[39m\u001b[32m, line 1\u001b[39m\n\u001b[32m----> \u001b[39m\u001b[32m1\u001b[39m \u001b[43ma\u001b[49m\u001b[43m \u001b[49m\u001b[43m*\u001b[49m\u001b[43m \u001b[49m\u001b[43mb\u001b[49m\n",
+      "\u001b[31mRuntimeError\u001b[39m: The size of tensor a (2) must match the size of tensor b (4) at non-singleton dimension 1"
+     ]
     }
    ],
    "source": [
-    "a + b"
+    "a * b"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 61,
+   "execution_count": 4,
    "id": "fa96042e",
    "metadata": {},
    "outputs": [
@@ -67,18 +67,39 @@
        "        [12.5000]])"
       ]
      },
-     "execution_count": 61,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "a.float().pow(2).mean(dim=-1, keepdim=True)"
+    "a.pow(2).mean(dim=-1, keepdim=True)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 62,
+   "execution_count": 5,
+   "id": "6d25ddd0",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "tensor([[0.9953]])"
+      ]
+     },
+     "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "torch.tensor([[2.0]]).erf()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
    "id": "6db97b69",
    "metadata": {},
    "outputs": [
@@ -89,13 +110,79 @@
        "        [3.0000, 2.8284]])"
       ]
      },
-     "execution_count": 62,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "a * torch.rsqrt(b + 1e-6)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "id": "6bd8e12d",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "tensor([[0.7616, 0.9640],\n",
+       "        [0.9951, 0.9993]])"
+      ]
+     },
+     "execution_count": 7,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "a.tanh()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "id": "65bc61af",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "tensor([[0.8427, 0.9953],\n",
+       "        [1.0000, 1.0000]])"
+      ]
+     },
+     "execution_count": 8,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "a.erf()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "id": "ede9b955",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "tensor([[0.8413, 1.9545],\n",
+       "        [2.9960, 3.9999]])"
+      ]
+     },
+     "execution_count": 11,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "nn.functional.gelu(a.float(), approximate=\"none\")"
    ]
   },
   {
