add some transpose and things for query attention

--- a/tests.ipynb
+++ b/tests.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "id": "8e310db9",
    "metadata": {},
    "outputs": [
@@ -23,7 +23,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "id": "4f2e196a",
    "metadata": {},
    "outputs": [],
@@ -34,6 +34,266 @@
     "theta_base=10_000\n",
     "dtype=torch.float32\n",
     "assert head_dim % 2 == 0"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "id": "4f890112",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "tensor([[1., 1., 2., 2.],\n",
+       "        [3., 3., 4., 4.]])"
+      ]
+     },
+     "execution_count": 13,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "a.repeat_interleave(2,1)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "id": "736dfec4",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "tensor([[[True, True, True, True, True, True],\n",
+       "         [True, True, True, True, True, True],\n",
+       "         [True, True, True, True, True, True]],\n",
+       "\n",
+       "        [[True, True, True, True, True, True],\n",
+       "         [True, True, True, True, True, True],\n",
+       "         [True, True, True, True, True, True]],\n",
+       "\n",
+       "        [[True, True, True, True, True, True],\n",
+       "         [True, True, True, True, True, True],\n",
+       "         [True, True, True, True, True, True]]])"
+      ]
+     },
+     "execution_count": 10,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "torch.ones((3, 3,3), dtype=torch.bool).repeat_interleave(2, dim=2)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "1c214b1e",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "tensor([[True, True, True],\n",
+       "        [True, True, True],\n",
+       "        [True, True, True]])"
+      ]
+     },
+     "execution_count": 11,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "ones = torch.ones((3, 3), dtype=torch.bool)\n",
+    "ones"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "id": "934079ed",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "tensor([[False,  True,  True],\n",
+       "        [False, False,  True],\n",
+       "        [False, False, False]])"
+      ]
+     },
+     "execution_count": 12,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# mask_global (future is masked: j > i)\n",
+    "        #     j:  0 1 2 3 4 5 6 7\n",
+    "        #  i\n",
+    "        #     0:  0 1 1 1 1 1 1 1\n",
+    "        #     1:  0 0 1 1 1 1 1 1\n",
+    "        #     2:  0 0 0 1 1 1 1 1\n",
+    "        #     3:  0 0 0 0 1 1 1 1\n",
+    "        #     4:  0 0 0 0 0 1 1 1\n",
+    "        #     5:  0 0 0 0 0 0 1 1\n",
+    "        #     6:  0 0 0 0 0 0 0 1\n",
+    "        #     7:  0 0 0 0 0 0 0 0\n",
+    "mask_global = torch.triu(ones, diagonal=1)\n",
+    "mask_global"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "id": "a93fd12a",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "tensor([[False, False, False],\n",
+       "        [False, False, False],\n",
+       "        [False, False, False]])"
+      ]
+     },
+     "execution_count": 13,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# far_past (too far back is masked: i - j >= sliding_window)\n",
+    "# where sliding_window = 4\n",
+    "#     j:  0 1 2 3 4 5 6 7\n",
+    "#  i\n",
+    "#     0:  0 0 0 0 0 0 0 0\n",
+    "#     1:  0 0 0 0 0 0 0 0\n",
+    "#     2:  0 0 0 0 0 0 0 0\n",
+    "#     3:  0 0 0 0 0 0 0 0\n",
+    "#     4:  1 0 0 0 0 0 0 0\n",
+    "#     5:  1 1 0 0 0 0 0 0\n",
+    "#     6:  1 1 1 0 0 0 0 0\n",
+    "#     7:  1 1 1 1 0 0 0 0\n",
+    "far_past = torch.triu(ones, diagonal=512).T\n",
+    "far_past\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "id": "498d2e3f",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(tensor([[False,  True,  True],\n",
+       "         [False, False,  True],\n",
+       "         [False, False, False]]),\n",
+       " tensor([[False,  True,  True],\n",
+       "         [False, False,  True],\n",
+       "         [False, False, False]]))"
+      ]
+     },
+     "execution_count": 14,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Local (sliding_window) = future OR far-past\n",
+    "# mask_local\n",
+    "#     j:  0 1 2 3 4 5 6 7\n",
+    "# i\n",
+    "# 0:      0 1 1 1 1 1 1 1\n",
+    "# 1:      0 0 1 1 1 1 1 1\n",
+    "# 2:      0 0 0 1 1 1 1 1\n",
+    "# 3:      0 0 0 0 1 1 1 1\n",
+    "# 4:      1 0 0 0 0 1 1 1\n",
+    "# 5:      1 1 0 0 0 0 1 1\n",
+    "# 6:      1 1 1 0 0 0 0 1\n",
+    "# 7:      1 1 1 1 0 0 0 0\n",
+    "mask_local = mask_global | far_past\n",
+    "mask_global, mask_local"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "id": "7251e8a8",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "tensor([[1., -inf, -inf],\n",
+       "        [2., 3., -inf],\n",
+       "        [2., 3., 4.]])"
+      ]
+     },
+     "execution_count": 19,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "torch.tensor([[1,2,3],[2,3,4],[2,3,4]]).float().masked_fill(mask_global, float('-inf'))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 27,
+   "id": "d1c4366d",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "tensor([[[2, 2],\n",
+       "         [4, 4],\n",
+       "         [3, 3],\n",
+       "         [4, 4]],\n",
+       "\n",
+       "        [[2, 2],\n",
+       "         [4, 4],\n",
+       "         [3, 3],\n",
+       "         [4, 4]]])"
+      ]
+     },
+     "execution_count": 27,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "torch.tensor([[[2,4,3,4],[2,4,3,4]],[[2,4,3,4],[2,4,3,4]]]).transpose(1,2)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 34,
+   "id": "948b09e9",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(1, 2)"
+      ]
+     },
+     "execution_count": 34,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "a.transpose(-2, 1).stride()"
    ]
   },
   {
