--- a/gemma3.ipynb
+++ b/gemma3.ipynb
@@ -341,7 +341,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": null,
    "id": "457cb2f8-50c1-4045-8a74-f181bfb5fea9",
    "metadata": {
     "id": "457cb2f8-50c1-4045-8a74-f181bfb5fea9"
@@ -407,7 +407,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": null,
    "id": "e88de3e3-9f07-42cc-816b-28dbd46e96c4",
    "metadata": {
     "id": "e88de3e3-9f07-42cc-816b-28dbd46e96c4"
@@ -498,7 +498,7 @@
     "\n",
     "    def forward(self, input_ids):\n",
     "        # Forward pass\n",
-    "        b, seq_len = input_ids.shape\n",
+    "        _, seq_len = input_ids.shape\n",
     "        print(\"input_ids shape:\", input_ids.shape)\n",
     "        x = self.tok_emb(input_ids) * (self.cfg[\"emb_dim\"] ** 0.5)\n",
     "        mask_global, mask_local = self._create_masks(seq_len, x.device)\n",
