add debug things that might be useless, fix bugs and problems that made it panic, now it runs

--- a/tests.ipynb
+++ b/tests.ipynb
@@ -17,8 +17,7 @@
    ],
    "source": [
     "import torch.nn as nn\n",
-    "import torch\n",
-    "from torch.nn.parameter import Parameter"
+    "import torch"
    ]
   },
   {
@@ -38,29 +37,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 3,
    "id": "4f890112",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "tensor([[1., 1., 2., 2.],\n",
-       "        [3., 3., 4., 4.]])"
+       "tensor(2.5000)"
       ]
      },
-     "execution_count": 13,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "a.repeat_interleave(2,1)"
+    "a.repeat_interleave(2,1).mean()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 4,
    "id": "736dfec4",
    "metadata": {},
    "outputs": [
@@ -80,7 +78,7 @@
        "         [True, True, True, True, True, True]]])"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -91,7 +89,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "id": "1c214b1e",
    "metadata": {},
    "outputs": [
@@ -103,7 +101,7 @@
        "        [True, True, True]])"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -115,7 +113,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 6,
    "id": "934079ed",
    "metadata": {},
    "outputs": [
@@ -127,7 +125,7 @@
        "        [False, False, False]])"
       ]
      },
-     "execution_count": 12,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -150,7 +148,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 7,
    "id": "a93fd12a",
    "metadata": {},
    "outputs": [
@@ -162,7 +160,7 @@
        "        [False, False, False]])"
       ]
      },
-     "execution_count": 13,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -186,7 +184,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 8,
    "id": "498d2e3f",
    "metadata": {},
    "outputs": [
@@ -201,7 +199,7 @@
        "         [False, False, False]]))"
       ]
      },
-     "execution_count": 14,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -225,7 +223,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 9,
    "id": "7251e8a8",
    "metadata": {},
    "outputs": [
@@ -237,7 +235,7 @@
        "        [2., 3., 4.]])"
       ]
      },
-     "execution_count": 19,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -248,7 +246,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 10,
    "id": "d1c4366d",
    "metadata": {},
    "outputs": [
@@ -266,7 +264,7 @@
        "         [4, 4]]])"
       ]
      },
-     "execution_count": 27,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -277,7 +275,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 11,
    "id": "948b09e9",
    "metadata": {},
    "outputs": [
@@ -287,7 +285,7 @@
        "(1, 2)"
       ]
      },
-     "execution_count": 34,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -298,7 +296,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 12,
    "id": "7ab1c432",
    "metadata": {},
    "outputs": [],
@@ -308,7 +306,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 13,
    "id": "0243dede",
    "metadata": {},
    "outputs": [
@@ -318,7 +316,7 @@
        "tensor([0., 1., 2., 3., 4., 5., 6., 7.])"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -330,7 +328,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 14,
    "id": "21ef8170",
    "metadata": {},
    "outputs": [
@@ -347,7 +345,7 @@
        "        [7.]])"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -358,7 +356,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 15,
    "id": "9a2141ae",
    "metadata": {},
    "outputs": [
@@ -368,7 +366,7 @@
        "tensor([[1.0000e+00, 1.5849e-01, 2.5119e-02, 3.9811e-03, 6.3096e-04]])"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -379,7 +377,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 16,
    "id": "c4cbca7a",
    "metadata": {},
    "outputs": [
@@ -396,7 +394,7 @@
        "        [7.0000e+00, 1.1094e+00, 1.7583e-01, 2.7867e-02, 4.4167e-03]])"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -409,7 +407,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 17,
    "id": "70065006",
    "metadata": {},
    "outputs": [
@@ -434,7 +432,7 @@
        "         1.1094e+00, 1.7583e-01, 2.7867e-02, 4.4167e-03]])"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 17,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -446,7 +444,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 18,
    "id": "ceb2978c",
    "metadata": {},
    "outputs": [
@@ -471,7 +469,7 @@
        "          0.9996,  1.0000]])"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 18,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -482,7 +480,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 19,
    "id": "af023779",
    "metadata": {},
    "outputs": [],
@@ -511,7 +509,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 20,
    "id": "0b5cbf07",
    "metadata": {},
    "outputs": [],
@@ -523,6 +521,7 @@
     "\n",
     "    # Split x into first half and second half\n",
     "    x1 = x[..., : head_dim // 2]  # First half\n",
+    "    print(x1)\n",
     "    x2 = x[..., head_dim // 2 :]  # Second half\n",
     "\n",
     "    # Adjust sin and cos shapes\n",
@@ -539,7 +538,129 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 21,
+   "id": "99fcffc9",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "tensor([[ 1.0000,  1.0000,  1.0000,  1.0000],\n",
+       "        [ 0.5403,  1.0000,  0.5403,  1.0000],\n",
+       "        [-0.4161,  0.9998, -0.4161,  0.9998]])"
+      ]
+     },
+     "execution_count": 21,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "cos,sin = compute_rope_params(4, 10_000, 3)\n",
+    "cos"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 22,
+   "id": "3b1f1e17",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "tensor([[0.0000, 0.0000, 0.0000, 0.0000],\n",
+       "        [0.8415, 0.0100, 0.8415, 0.0100],\n",
+       "        [0.9093, 0.0200, 0.9093, 0.0200]])"
+      ]
+     },
+     "execution_count": 22,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "sin"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 23,
+   "id": "f15d2ecd",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "tensor([[[[ 1.,  2.,  3.,  4.],\n",
+       "          [ 5.,  6.,  7.,  8.],\n",
+       "          [ 9., 10., 11., 12.]],\n",
+       "\n",
+       "         [[ 2.,  4.,  6.,  8.],\n",
+       "          [10., 12., 14., 16.],\n",
+       "          [18., 20., 22., 24.]]]])"
+      ]
+     },
+     "execution_count": 23,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "a = torch.tensor([[\n",
+    "    [[1.0, 2.0, 3.0, 4.0],   # head 0, token 0\n",
+    "     [5.0, 6.0, 7.0, 8.0],   # head 0, token 1\n",
+    "     [9.0, 10.0, 11.0, 12.0]], # head 0, token 2\n",
+    "    [[2.0, 4.0, 6.0, 8.0],   # head 1, token 0\n",
+    "     [10.0, 12.0, 14.0, 16.0], # head 1, token 1\n",
+    "     [18.0, 20.0, 22.0, 24.0]]  # head 1, token 2\n",
+    "]])\n",
+    "a"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 24,
+   "id": "c01f6245",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "tensor([[[[ 1.,  2.],\n",
+      "          [ 5.,  6.],\n",
+      "          [ 9., 10.]],\n",
+      "\n",
+      "         [[ 2.,  4.],\n",
+      "          [10., 12.],\n",
+      "          [18., 20.]]]])\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "tensor([[[[  1.0000,   2.0000,   3.0000,   4.0000],\n",
+       "          [ -3.1888,   5.9197,   7.9895,   8.0596],\n",
+       "          [-13.7476,   9.7580,   3.6061,  12.1976]],\n",
+       "\n",
+       "         [[  2.0000,   4.0000,   6.0000,   8.0000],\n",
+       "          [ -6.3776,  11.8394,  15.9789,  16.1192],\n",
+       "          [-27.4952,  19.5160,   7.2121,  24.3952]]]])"
+      ]
+     },
+     "execution_count": 24,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "apply_rope(a, cos, sin)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 25,
    "id": "5c3ac46b",
    "metadata": {},
    "outputs": [],
@@ -568,7 +689,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 26,
    "id": "b023c503",
    "metadata": {},
    "outputs": [],
@@ -725,6 +846,97 @@
   },
   {
    "cell_type": "code",
+   "execution_count": null,
+   "id": "85273235",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "tensor([[-inf, 2., -inf],\n",
+       "        [4., -inf, 6.],\n",
+       "        [-inf, 8., -inf]])"
+      ]
+     },
+     "execution_count": 44,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "scores = torch.tensor([[1.0, 2.0, 3.0],\n",
+    "                      [4.0, 5.0, 6.0],\n",
+    "                      [7.0, 8.0, 9.0]])\n",
+    "\n",
+    "mask = torch.tensor([[True, False, True],\n",
+    "                    [False, True, False],\n",
+    "                    [True, False, True]])\n",
+    "\n",
+    "# Apply masked_fill: where mask is True, fill with -inf\n",
+    "scores.masked_fill(mask, float('-inf'))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "002a5b9c",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "tensor([[[[1., -inf, -inf],\n",
+       "          [1., 1., -inf],\n",
+       "          [1., 1., 1.]],\n",
+       "\n",
+       "         [[1., -inf, -inf],\n",
+       "          [1., 1., -inf],\n",
+       "          [1., 1., 1.]],\n",
+       "\n",
+       "         [[1., -inf, -inf],\n",
+       "          [1., 1., -inf],\n",
+       "          [1., 1., 1.]],\n",
+       "\n",
+       "         [[1., -inf, -inf],\n",
+       "          [1., 1., -inf],\n",
+       "          [1., 1., 1.]]],\n",
+       "\n",
+       "\n",
+       "        [[[1., -inf, -inf],\n",
+       "          [1., 1., -inf],\n",
+       "          [1., 1., 1.]],\n",
+       "\n",
+       "         [[1., -inf, -inf],\n",
+       "          [1., 1., -inf],\n",
+       "          [1., 1., 1.]],\n",
+       "\n",
+       "         [[1., -inf, -inf],\n",
+       "          [1., 1., -inf],\n",
+       "          [1., 1., 1.]],\n",
+       "\n",
+       "         [[1., -inf, -inf],\n",
+       "          [1., 1., -inf],\n",
+       "          [1., 1., 1.]]]])"
+      ]
+     },
+     "execution_count": 50,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "ones3 = torch.ones((2, 4,3,3))\n",
+    "ones2 = torch.tensor([\n",
+    "     [0.0, 1.0, 1.0],\n",
+    "            [0.0, 0.0, 1.0],\n",
+    "            [0.0, 0.0, 0.0], ]\n",
+    ", dtype=torch.bool)\n",
+    "\n",
+    "ones3.masked_fill(ones2, -torch.inf)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 16,
    "id": "8f680a13",
    "metadata": {},
@@ -833,19 +1045,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": null,
    "id": "6cc38cc9",
    "metadata": {},
    "outputs": [],
    "source": [
     "cfg = {\n",
-    "    \"vocab_size\": 144,\n",
-    "    \"context_length\": 68,\n",
-    "    \"emb_dim\": 4,\n",
+    "    \"vocab_size\": 262_144,\n",
+    "    \"context_length\": 32_768,\n",
+    "    \"emb_dim\": 640,\n",
     "    \"n_heads\": 4,\n",
-    "    \"n_layers\": 2,\n",
-    "    \"hidden_dim\": 8,\n",
-    "    \"head_dim\": 8,\n",
+    "    \"n_layers\": 18,\n",
+    "    \"hidden_dim\": 2048,\n",
+    "    \"head_dim\": 256,\n",
     "    \"qk_norm\": True,\n",
     "    \"n_kv_groups\": 1,\n",
     "    \"rope_local_base\": 10_000.0,\n",
@@ -873,7 +1085,7 @@
     "    ],\n",
     "    \"dtype\": torch.bfloat16,\n",
     "    \"query_pre_attn_scalar\": 256,\n",
-    "}\n"
+    "}"
    ]
   },
   {
